assets/network-policy/allow-operand-egress-to-dns.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
 name: allow-operand-egress-to-dns
 namespace: ${OBJECT_NAMESPACE}
 annotations:
  include.release.openshift.io/hypershift: "true"
  include.release.openshift.io/ibm-cloud-managed: "true"
  include.release.openshift.io/self-managed-high-availability: "true"
  include.release.openshift.io/single-node-developer: "true"
  capability.openshift.io/name: Storage
spec:
 podSelector:
   matchLabels:
     openshift.storage.network-policy.operand-dns: allow
 egress:
 - to:
   - namespaceSelector:
       matchLabels:
         kubernetes.io/metadata.name: openshift-dns
     podSelector:
       matchLabels:
         dns.operator.openshift.io/daemonset-dns: default
   ports:
   - protocol: TCP
     port: dns-tcp
   - protocol: UDP
     port: dns
 policyTypes:
 - Egress
