assets/network-policy/allow-operand-ingress-to-metrics.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
 name: allow-operand-ingress-to-metrics
 namespace: ${OBJECT_NAMESPACE}
 annotations:
  include.release.openshift.io/hypershift: "true"
  include.release.openshift.io/ibm-cloud-managed: "true"
  include.release.openshift.io/self-managed-high-availability: "true"
  include.release.openshift.io/single-node-developer: "true"
  capability.openshift.io/name: Storage
spec:
 podSelector:
   matchLabels:
     openshift.storage.network-policy.operand-metrics: allow
 ingress:
 - ports:
   - protocol: TCP
     port: 8383
   - protocol: TCP
     port: 9393
 policyTypes:
 - Ingress
